# python-web-hw-13-2

./: pyproject.toml
hw_project/hw_project/: asgi.py  settings.py  urls.py  wsgi.py
hw_project/quotes/: admin.py  forms.py  models.py  urls.py  views.py
hw_project/quotes/migrations/: 0001_initial.py
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  author.html  base.html  index.html  quote_list.html  tag.html  top_tags.html
hw_project/quotes/templatetags/: extract.py  filters.py
hw_project/users/: forms.py  models.py  urls.py  views.py
hw_project/users/migrations/: 0001_initial.py
hw_project/users/templates/users/: login.html  password_reset_complete.html  password_reset_email.html  profile.html
hw_project/utils/: add_quotes_to_mongo.py  authors.json  migrations.py
